# wallettracker

backend/: Containerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  test_main.py  test_wallets.py
backend/app/routers/: wallets.py
frontend/wallet-app/: README.md  package-lock.json  package.json
frontend/wallet-app/public/: index.html
frontend/wallet-app/src/: App.css  App.js  index.css
frontend/wallet-app/src/components/: NavbarElements.js  index.js
frontend/wallet-app/src/pages/: addwallet.js  index.js
