[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
web3 = "^6.5.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
pytest = "^7.3.2"
pytest-dependency = "^0.5.1"
pytest-order = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
